--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gssg-year-book",
-  "version": "1.0.0",
-  "description": "Phot book for gss gwarinpa students- past and present",
+  "name": "gss-gwarinpa-contact-book",
+  "version": "2.0.0",
+  "description": "Photo book for gss gwarinpa students - past and present",
   "main": "server.js",
   "scripts": {
     "watch": "webpack --watch",
@@ -40,7 +40,6 @@
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
-    "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-twitter": "^1.0.4",
     "passport-yahoo-oauth": "^0.2.0",
