--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "watch": "webpack --watch",
+    "dev-start": "NODE_ENV=dev nodemon db",
     "start": "nodemon db",
     "tailwind": "npx tailwindcss -i ./public/tailwindcss/input.css -o ./public/tailwindcss/output.css --watch --minify"
   },
