--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^8.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.32.0",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
@@ -42,6 +43,8 @@
     "mongodb": "^3.5.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "multer-storage": "^0.4.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.2",
     "passport": "^0.6.0",
