--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['master']
-  workflow_call:
+  
+  workflow_dispatch: 
 
 env:
   REGISTRY: ghcr.io
